# tps_algorithmes_avancees

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/recalage/: CostFunction.h  DeformImage.h  HelloWorld.h  Image.h  Interpolation.h  Parametres.h  Point.h  Recalage.h  Similarite.cpp  Similarite.h  Transformation.h  amoeba.h
prof_example/: exemple.cpp
scripts/: build.sh  clean.sh  cmake.sh  run.sh  run_tests.sh
src/: CMakeLists.txt  CostFunction.cpp  DeformImage.cpp  HelloWorld.cpp  Image.cpp  Interpolation.cpp  Recalage.cpp  Similarite.cpp  Transformation.cpp
test/: CMakeLists.txt  deformImage_tests.cpp  hello_world_tests.cpp  image_tests.cpp  similarity_tests.cpp  transformation_testes.cpp  transformation_tests.cpp
